Implements time-entry --list

--- a/man/freshbooks-time-entry.1
+++ b/man/freshbooks-time-entry.1
@@ -10,7 +10,7 @@ A command\-line interface for interacting with Freshbooks Time Entries
 .P
 .RS 2
 .EX
-\-\-option, \-o [String] \- An example option\.
+\-\-list, \-l \- Display a list of time entries
 \-\-help, \-h \- Display this message
 .EE
 .RE
@@ -18,7 +18,9 @@ A command\-line interface for interacting with Freshbooks Time Entries
 .P
 .RS 2
 .EX
-# Executing time\-entry with no options
-$ freshbooks\-time\-entry
+# Printing a list of time entries
+$ freshbooks time\-entry \-\-list
+id hours date       billed notes
+1  8     2013\-11\-05 0      Example entry
 .EE
 .RE
