--- a/man/freshbooks-time-entry.1
+++ b/man/freshbooks-time-entry.1
@@ -10,10 +10,18 @@ A command\-line interface for interacting with Freshbooks Time Entries
 .P
 .RS 2
 .EX
-\-\-list, \-l \- Display a list of time entries
+\-\-list, \-l   \- Display a list of time entries
+
+\-\-create, \-c \- Create one or more time entries from JSON data, either
+               read from STDIN or passed to \-\-data as a string
+
+\-\-data JSON \- Time entry data for \-\-create
+
 \-\-help, \-h \- Display this message
 .EE
 .RE
+.P
+See http://developers\.freshbooks\.com/docs/time\-entries/ for more information\.
 .SH Examples
 .P
 .RS 2
@@ -22,5 +30,8 @@ A command\-line interface for interacting with Freshbooks Time Entries
 $ freshbooks time\-entry \-\-list
 id hours date       billed notes
 1  8     2013\-11\-05 0      Example entry
+
+# Create some entries from a JSON file
+$ cat entries\.json | freshbooks time\-entry \-\-create
 .EE
 .RE
